--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "babel-plugin-react-compiler": "^0.0.0-experimental-57db2f6-20240926",
@@ -20,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
     "next": "^15.0.0-rc.0",
+    "next-themes": "^0.3.0",
     "react": "^19.0.0-rc-67fee58b-20240926",
     "react-dom": "^19.0.0-rc-67fee58b-20240926",
     "react-xarrows": "^2.0.2",
