--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/lodash": "^4.17.9",
     "babel-plugin-react-compiler": "^0.0.0-experimental-57db2f6-20240926",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "next": "^15.0.0-rc.0",
     "next-themes": "^0.3.0",
