--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/lodash": "^4.17.9",
+    "@xyflow/react": "^12.3.1",
     "babel-plugin-react-compiler": "^0.0.0-experimental-57db2f6-20240926",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,7 +29,9 @@
     "react-dom": "^19.0.0-rc-67fee58b-20240926",
     "react-xarrows": "^2.0.2",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tree-sitter": "^0.21.1",
+    "web-tree-sitter": "^0.23.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -38,6 +41,8 @@
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tree-sitter-cli": "^0.23.2",
+    "tree-sitter-javascript": "^0.23.0",
     "typescript": "^5"
   }
 }
